--- a/app/user_templates/views/menu/index.html
+++ b/app/user_templates/views/menu/index.html
@@ -3,10 +3,9 @@
   {{ if Volt.current_user }}
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-        <span class="glyphicon glyphicon-user"></span>
-        {{ show_name }}
-        <span class="caret"></span>
+        <button type="button" class="btn text-uppercase see"><i class="fa fa-user fa-2x"></i>  {{ show_name }} <span class="caret"></span></button>
       </a>
+
       <ul class="dropdown-menu" role="menu">
         <li>
           <a href="/account">Account</a>
@@ -18,8 +17,7 @@
   {{ else }}
     <li class="{{ if is_active? }}active{{ end }}">
       <a href="/login">
-        <span class="glyphicon glyphicon-user"></span>
-        Login
+        <button type="button" class="btn text-uppercase see"><i class="fa fa-user fa-2x"></i>  Login</span></button> 
       </a>
     </li>
   {{ end }}
