--- a/app/user_templates/views/account/index.html
+++ b/app/user_templates/views/account/index.html
@@ -2,25 +2,27 @@
   Your Account
 
 <:Body>
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <div class="span4 offset4 well">
-        <legend>Basic Info</legend>
 
-        <form e-submit="save">
-          <:fields:text value="{{ _name }}" />
-          <:fields:textarea value="{{ _bio }}" />
-          <button class="btn btn-info btn-block">Save</button>
-        </form>
 
-      </div>
-      <hr />
-      <div class="span4 offset4 well">
-        <legend>Update Password</legend>
-        <form e-submit="save">
-          <:fields:text type="password" value="{{ _password }}" />
-          <button class="btn btn-info btn-block">Save</button>
-        </form>
-      </div>
+<div class="request-widget panel panel-default">
+  <div class="list-group">
+    <div class="panel-heading text-center message">
+      <h5 class="text-uppercase"><strong>{{ _name }} Account</strong></h5>
     </div>
+
+    <form e-submit="save">
+      <:fields:text value="{{ _name }}" />
+      <:fields:textarea value="{{ _bio }}" />
+      <button class="btn btn-info btn-block">Save</button>
+    </form>
+
+    <div class="panel-heading text-center message">
+      <h5 class="text-uppercase"><strong>>Update Password</strong></h5>
+    </div>
+
+    <form e-submit="save">
+      <:fields:text type="password" value="{{ _password }}" />
+      <button class="btn btn-info btn-block">Save</button>
+    </form>
   </div>
+</div>
