--- a/app/user_templates/views/login/index.html
+++ b/app/user_templates/views/login/index.html
@@ -2,38 +2,38 @@
   Login
 
 <:Body>
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <div class="span4 offset4 well">
-        <legend>Please Login</legend>
 
-        <form e-submit="do_login">
-          {{ if errors.present? }}
-            <div class="alert alert-danger">{{ errors }}</div>
-          {{ end }}
-
-          <div class="form-group">
-            <label class="control-label">
-              {{ if use_username? }}
-                Username
-              {{ else }}
-                Email
-              {{ end }}
-            </label>
-            <input class="form-control" type="text" value="{{ login }}" autofocus />
-          </div>
-
-          <div class="form-group">
-            <label class="control-label">Password <small style="font-weight: normal;">(<a tabindex="-1" href="{{ forgot_url }}">forgot password</a>)</small></label>
-            <input class="form-control" type="password" value="{{ password }}">
-          </div>
-
-          <button class="btn btn-info btn-block">Login</button>
-        </form>
-
-        <hr />
-        Don't have an account? <a href="/signup">Signup here</a>
-      </div>
+<div class="request-widget panel panel-default">
+  <div class="list-group">
+    <div class="panel-heading text-center message">
+      <h5 class="text-uppercase"><strong>Please Login</strong></h5>
     </div>
-  </div>
 
+    <form e-submit="do_login">
+      {{ if errors.present? }}
+        <div class="alert alert-danger">{{ errors }}</div>
+      {{ end }}
+
+      <div class="form-group">
+        <label class="control-label">
+          {{ if use_username? }}
+            Username
+          {{ else }}
+            Email
+          {{ end }}
+        </label>
+        <input class="form-control" type="text" value="{{ login }}" autofocus />
+      </div>
+
+      <div class="form-group">
+        <label class="control-label">Password <small style="font-weight: normal;">(<a tabindex="-1" href="{{ forgot_url }}">forgot password</a>)</small></label>
+        <input class="form-control" type="password" value="{{ password }}">
+      </div>
+
+      <button class="btn btn-info btn-block">Login</button>
+    </form>
+
+    <hr />
+    Don't have an account? <a href="/signup">Signup here</a>
+  </div>
+</div>
