--- a/app/user_templates/views/account/index.html
+++ b/app/user_templates/views/account/index.html
@@ -3,26 +3,38 @@
 
 <:Body>
 
+<div class="row">
+  <div class="request-widget panel panel-default">
+    <div class="list-group">
+      <div class="panel-heading text-center message">
+        <h5 class="text-uppercase"><strong>Your Account</strong></h5>
+      </div>
 
-<div class="request-widget panel panel-default">
-  <div class="list-group">
-    <div class="panel-heading text-center message">
-      <h5 class="text-uppercase"><strong>{{ _name }} Account</strong></h5>
+      <div class="span4 offset4 well">
+        <form e-submit="save">
+          <:fields:text value="{{ _name }}" />
+          <:fields:textarea value="{{ _bio }}" />
+          <button class="btn btn-info btn-block">Save</button>
+        </form>
+      </div>
     </div>
+  </div>
+</div>
 
-    <form e-submit="save">
-      <:fields:text value="{{ _name }}" />
-      <:fields:textarea value="{{ _bio }}" />
-      <button class="btn btn-info btn-block">Save</button>
-    </form>
+<div class="row">
+  <div class="request-widget panel panel-default">
+    <div class="list-group">
+      <div class="panel-heading text-center message">
+        <h5 class="text-uppercase"><strong>Update Password</strong></h5>
+      </div>
 
-    <div class="panel-heading text-center message">
-      <h5 class="text-uppercase"><strong>>Update Password</strong></h5>
+      <div class="span4 offset4 well">
+
+        <form e-submit="save">
+          <:fields:text type="password" value="{{ _password }}" />
+          <button class="btn btn-info btn-block">Save</button>
+        </form>
+      </div>
     </div>
-
-    <form e-submit="save">
-      <:fields:text type="password" value="{{ _password }}" />
-      <button class="btn btn-info btn-block">Save</button>
-    </form>
   </div>
 </div>
