--- a/app/user_templates/views/menu/index.html
+++ b/app/user_templates/views/menu/index.html
@@ -8,7 +8,7 @@
 
       <ul class="dropdown-menu" role="menu">
         <li>
-          <a href="/account">Account</a>
+          <a href="/favorites">Account</a>
         </li>
         <li class="divider"></li>
         <li><a e-click="Volt.logout">Logout</a></li>
@@ -17,7 +17,7 @@
   {{ else }}
     <li class="{{ if is_active? }}active{{ end }}">
       <a href="/login">
-        <button type="button" class="btn text-uppercase see"><i class="fa fa-user fa-2x"></i>  Login</span></button> 
+        <button type="button" class="btn text-uppercase see"><i class="fa fa-user fa-2x"></i>  Login</span></button>
       </a>
     </li>
   {{ end }}
