user specific actions in menu

--- a/app/user_templates/views/menu/index.html
+++ b/app/user_templates/views/menu/index.html
@@ -10,6 +10,12 @@
         <li>
           <a href="/favorites">Account</a>
         </li>
+        <li>
+          <a href="/places/submit">Add a place</a>
+        </li>
+        <li>
+          <a href="/events/submit">Add an event</a>
+        </li>
         <li class="divider"></li>
         <li><a e-click="Volt.logout">Logout</a></li>
       </ul>
